--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
 .hidden {
-    display: none;
-}
-.hiddenCountry {
-    display: none;
-}
-.hiddenCountries {
-    display: all;
+    display: none
 }
