--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,7 @@ body {
 .flex-item {
     display: flex;
     margin-left: 10px;
-    flex-direction: column;
 }
-#dupa {
+#row {
     flex-direction: row;
 }
