--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,47 @@
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     margin: 0;
-    padding: 0;
-    align-items: flex-start;
+    padding: 75px;
+    background-image: url(Images/Background.png)
 }
 .flex-item {
     display: flex;
     margin-left: 10px;
 }
-#row {
+.row {
     display: flex;
     flex-direction: row;
+    margin-top: 10px;
 }
 select {
     display: flex;
     width: 300px;
+}
+.row > .label {
+    flex: 0 0 13%;
+}
+
+.row > select {
+    flex: 0 0 42%;
+}
+
+.row > .flag {
+    flex: 0 0 5%;
+}
+.weather {
+    display: flex;
+    margin-left: 70%;
+    margin-top: -90px;
+    flex-direction: column;
+    justify-content: center;
+}
+.textTemperature {
+    display: flex;
+    margin-top: 20px;
+    width: 200px;
+    justify-content: center;
+    font-weight: bold;
+}
+.textTemperature >* {
+    display: flex;
+    margin-left: 5px;
 }
